<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.projectmap.RegisterActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-51dp"
            tools:layout_editor_absoluteY="-62dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/logo_login"
                            android:layout_width="218dp"
                            android:layout_height="101dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.497"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.138"
                            app:srcCompat="@drawable/labelle_pink" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/logo_login"
                            app:layout_constraintHorizontal_bias="0.495"
                            app:layout_constraintStart_toStartOf="@+id/logo_login"
                            app:layout_constraintTop_toBottomOf="@+id/logo_login"
                            app:layout_constraintVertical_bias="0.0"
                            app:srcCompat="@drawable/hi_reg" />


                        <TextView
                            android:id="@+id/yuk_gabung"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/ajakan"
                            android:textColor="@color/black"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/imageView3"
                            app:layout_constraintStart_toStartOf="@+id/imageView3"
                            app:layout_constraintTop_toBottomOf="@+id/imageView3"
                            app:layout_constraintVertical_bias="0.0" />

                        <EditText
                            android:id="@+id/txt_nama"
                            android:layout_width="327dp"
                            android:layout_height="48dp"
                            android:ems="10"
                            android:fontFamily="@font/nunito_regular"
                            android:inputType="textPersonName"
                            android:text="@string/nama"
                            android:textColor="#6D6D6D"
                            android:textSize="13sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.511"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/yuk_gabung"
                            app:layout_constraintVertical_bias="0.069" />

                        <EditText
                            android:id="@+id/txt_username"
                            android:layout_width="327dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="24dp"
                            android:ems="10"
                            android:fontFamily="@font/nunito_regular"
                            android:inputType="textPersonName"
                            android:text="@string/username"
                            android:textColor="#6D6D6D"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="@+id/txt_nama"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/txt_nama"
                            app:layout_constraintTop_toBottomOf="@+id/txt_nama" />

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="327dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="24dp"
                            android:ems="10"
                            android:fontFamily="@font/nunito_regular"
                            android:inputType="textEmailAddress"
                            android:text="@string/email"
                            android:textColor="#6D6D6D"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="@+id/txt_username"
                            app:layout_constraintStart_toStartOf="@+id/txt_username"
                            app:layout_constraintTop_toBottomOf="@+id/txt_username" />

                        <EditText
                            android:id="@+id/txt_password"
                            android:layout_width="327dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="24dp"
                            android:ems="10"
                            android:fontFamily="@font/nunito_regular"
                            android:inputType="textPassword"
                            android:text="@string/password"
                            android:textColor="#6D6D6D"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="@+id/input_email"
                            app:layout_constraintStart_toStartOf="@+id/input_email"
                            app:layout_constraintTop_toBottomOf="@+id/input_email" />


                        <RadioGroup
                            android:id="@+id/rg_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.207"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/jenis_kelamin">

                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="#F982AA"
                                    android:fontFamily="@font/nunito_regular"
                                    android:text="@string/wedok"
                                    android:textColor="#7A7977"
                                    android:textSize="12sp" />

                                <RadioButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:buttonTint="#F982AA"
                                    android:fontFamily="@font/nunito_regular"
                                    android:text="@string/lanang"
                                    android:textColor="#7A7977"
                                    android:textSize="12sp" />

                        </RadioGroup>

                        <TextView
                            android:id="@+id/jenis_kelamin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:fontFamily="@font/nunito_regular"
                            android:text="@string/jenis_kelamin"
                            android:textSize="13sp"
                            app:layout_constraintEnd_toEndOf="@+id/txt_password"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/txt_password"
                            app:layout_constraintTop_toBottomOf="@+id/txt_password" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_register"
                            android:layout_width="329dp"
                            android:layout_height="36dp"
                            android:layout_marginTop="100dp"
                            android:background="@drawable/button_regist"
                            app:cornerRadius="5dp"
                            app:layout_constraintEnd_toEndOf="@+id/txt_password"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/txt_password"
                            app:layout_constraintTop_toBottomOf="@+id/jenis_kelamin"
                            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                        <ImageView
                            android:id="@+id/txt_s_and_k"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="19dp"
                            android:src="@drawable/sandk_reg"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/button_register" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/background1"
                            android:layout_marginTop="19dp"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txt_s_and_k"
                            app:layout_constraintVertical_bias="0.0">

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="95dp"
                                    android:fontFamily="@font/nunito_regular"
                                    android:text="@string/sudah_ada_akun"
                                    android:textColor="@color/grey_login"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/txt_Move_To_SignIn"
                                    android:layout_width="108dp"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="2dp"
                                    android:layout_marginEnd="85dp"
                                    android:layout_toEndOf="@+id/textView3"
                                    android:fontFamily="@font/nunito_bold"
                                    android:text="@string/login_sekarang"
                                    android:textColor="@color/daftar_sekarang"
                                    android:textSize="12sp" />


                        </RelativeLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>